Btle configuration: New activity for wifi scan and set password (index fixed)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
         <item>Temperature</item>
         <item>Moisture</item>
         <item>Image</item>
+        <item>Map</item>
     </string-array>
 
 </resources>
